# ml-with-microcontrollers

./: .gitignore  Makefile  README.md  pyproject.toml
Code/first_draft/mpu6050/detect_velocity/: detect_velocity.ino  plot_variables.py
src/detect_velocity/: data_preprocessing.py  plot_variables.py
src/detect_velocity/data_collection/: negative_example.csv  positive_example.csv
src/turn_on_led/: turn_on_led.ino
