[tool.poetry]
name = "machine_learning_with_microcontrollers"
version = "0.1.0"
description = "This folder contains project files aiming to connect machine learning algorithms with microcontrollers. The end goal is to run an computer vision model with a microcontroller in order to detect objects."
authors = ["Benjamin Henriquez Soto"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = ">=1.22,<1.25"
pandas = "^2.1.4"
pyserial = "^3.5"
tensorflow = { version = "2.13.0", platform = "darwin" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1, <0.35.0", platform = "darwin" }
]
matplotlib = "^3.8.2"
mpld3 = "^0.5.10"
black = "^23.12.1"
isort = "^5.13.2"
pylint = "~2.17"
make = "^0.1.6.post2"
pyqt5 = "^5.15.10"
scikit-learn = "^1.3.2"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint]
# Follow snake_case convention
const-naming-style = "snake_case"
load-plugins= "pylint.extensions.no_self_use"
recursive = true

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
preview = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
